--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,11 @@ live{
 
 
 }
-
-
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 
 }
 
@@ -45,4 +48,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.firebaseui:firebase-ui:0.3.1'
 }
+apply plugin: 'com.google.gms.google-services'
